More responsiviness issues on safari - alligned divs to center

--- a/css/myboard.css
+++ b/css/myboard.css
@@ -87,25 +87,33 @@ padding-bottom: 12px;
 
 
 .Chessoptions{
-    padding-left: 39%;
+    margin-right: auto;
+    margin-left: auto;
+    justify-content: center;
+    text-align: center;
     height: 0;
 
 }
 .Chessoptions button{
-width:155px;
+width:200px;
 height:50px;
-font-size:12px;
+font-size:9px;
+
 }
 
 .Chessoptions a{
 
     width:155px;
-font-size:12px;
+font-size:15px;
 }
 
 
 .Chesstatus{
-    padding-left: 15%;
+    margin-right: auto;
+    margin-left: auto;
+    justify-content: center;
+    text-align: center;
+    
     font-size: 20px;
     
 }
